sync controller
